--- a/API.csproj
+++ b/API.csproj
@@ -18,8 +18,15 @@
     <PackageReference Include="Neo4j.Driver" Version="5.1.0" />
     <PackageReference Include="Neo4j.Driver.Simple" Version="5.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="PasswordGenerator" Version="2.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Unity" Version="5.11.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\V2\" />
+    <Folder Include="Enum\" />
+    <Folder Include="Models\V2\" />
   </ItemGroup>
 
 </Project>
