--- a/API.csproj
+++ b/API.csproj
@@ -8,6 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\V2\**" />
+    <Compile Remove="Models\V2\**" />
+    <Content Remove="Controllers\V2\**" />
+    <Content Remove="Models\V2\**" />
+    <EmbeddedResource Remove="Controllers\V2\**" />
+    <EmbeddedResource Remove="Models\V2\**" />
+    <None Remove="Controllers\V2\**" />
+    <None Remove="Models\V2\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.10" />
@@ -19,11 +30,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="PasswordGenerator" Version="2.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\V2\" />
-    <Folder Include="Models\V2\" />
   </ItemGroup>
 
 </Project>
